<resources>
    <string name="app_name">Chat App</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_to_my_chat">WELCOME TO MY CHAT</string>
    <string name="welcome">Welcome To ChatApp</string>
    <string name="login">LOGIN</string>
    <string name="empty_username_error">Please enter username</string>
    <string name="empty_password_error">Please enter password</string>
    <string name="empty_confirm_password_error">Please enter password again</string>
    <string name="email">Email</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="password_length_error">Password must b 8 characters long</string>
    <string name="new_user">New user?</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="password_doesnt_match_error">Password doesn\'t match</string>
    <string name="empty_email_error">Please enter email</string>
    <string name="chatapp">ChatApp</string>
    <string name="chats">Chats</string>
    <string name="users">Users</string>
</resources>