<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_8dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_my_chat"
        android:gravity="center"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/sub_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />


    <TextView
        android:id="@+id/tv_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm_password"
        />

    <TextView
        android:id="@+id/img_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_background"
        android:gravity="center_horizontal"
        android:padding="@dimen/dimen_8dp"
        android:src="@drawable/black_background"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_confirm_password"
        app:layout_constraintVertical_bias="0.962" />


</androidx.constraintlayout.widget.ConstraintLayout>